Fixing whitespace wrapping on about page, readded username to menu. It was broken due to some angular-flask nonsense earlier

--- a/static/css/ml.css
+++ b/static/css/ml.css
@@ -9,7 +9,6 @@
 .ml-container {
 	margin-top:71px;
 	padding-left: 15px;
-	white-space: nowrap;
 }
 
 .ml-stream-container {
